<resources>
    <string name="app_name">JustJava</string>
    <string name="orderSummary">ORDER SUMMARY</string>
    <string name="order">Order</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="quantity">QUANTITY</string>
    <string name="chocolate">Chocolate</string>
    <string name="whippedCream">Whipped cream</string>
    <string name="toppings">TOPPINGS</string>
    <string name="name">Name</string>
</resources>
