<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bruno.justjava.MainActivity">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/name"/>
    <TextView
        style="@style/Header"
        android:text="@string/toppings"/>
    <CheckBox
        android:id="@+id/whiped_cream_checkbox"
        style="@style/Checkbox"
        android:text="@string/whippedCream"/>
    <CheckBox
        android:id="@+id/chocolate_checkbox"
        style="@style/Checkbox"
        android:text="@string/chocolate"/>
    <TextView
        style="@style/Header"
        android:text="@string/quantity"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/decrement_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrement"/>
        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:id="@+id/increment_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/plus"
            android:onClick="increment"/>
    </LinearLayout>
    <TextView
        style="@style/Header"
        android:text="@string/orderSummary"/>
    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:onClick="order"/>
</LinearLayout>
